@@ -1,3 +1,3 @@
 FROM openjdk:9
-COPY ./target/http_client-0.0.1-SNAPSHOT.jar /usr/src/myapp/http_client-0.0.1-SNAPSHOT.jar
-CMD ["java", "-jar", "--add-modules=jdk.incubator.httpclient", "/usr/src/myapp/http_client-0.0.1-SNAPSHOT.jar"]
+COPY ./target/vagas-0.0.1-SNAPSHOT.jar /usr/src/myapp/vagas.jar
+CMD ["java", "-jar","-Dspring.profiles.active=docker", "/usr/src/myapp/vagas.jar"]
